[fix] code clean up and commenting

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
+		<div id="loading_symbol"> 
+		</div>
 		<div class="navigation_arrow" id="navigation_left_arrow">
 			<img src="assets/img/leftarrow.gif">
 		</div>
