test for meta tag smart banner

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>LightBox</title>
 		<link rel="stylesheet" href="assets/css/style.css">
+		<meta name="apple-itunes-app" content="app-id=N9RH57ZHF2, affiliate-data=myAffiliateData, app-argument=standapp://">
 	</head>
 	<body>
 		<div id="loading_symbol"> 
